<resources>
    <string name="app_name">OnlineShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_in">Sign in</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sing_in_with_google">Sing in with Google</string>
    <string name="sing_in_with_apple">Sing In with Apple</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_is_empty">Login is empty</string>
    <string name="first_name_is_empty">First name is Empty</string>
    <string name="last_name_is_empty">Last name is Empty</string>
    <string name="email_is_empty">Email is Empty</string>
    <string name="pass_is_empty">Password is empty</string>
    <string name="Invalid_login">Invalid login</string>
    <string name="Invalid_first_name">Invalid First name</string>
    <string name="Invalid_last_name">Invalid Last name</string>
    <string name="Invalid_password">Invalid password</string>
    <string name="Invalid_email">Invalid Email</string>
    <string name="not_login">Such a login is not registered</string>
    <string name="already_login">Such a login is already registered</string>
    <string name="registered">User successfully registered</string>
    <string name="trade_bay">Trade bay</string>
    <string name="bata">bata</string>
    <string name="menu">menu</string>
    <string name="photo">photo</string>
    <string name="location">Location</string>
    <string name="hint_search">What are you looking for ?</string>
    <string name="text_category">Phones</string>
    <string name="category_icon">category_icon</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="photo_latest_view">photo latest view</string>
    <string name="phone">phone</string>
    <string name="price_latest">$ 31.00</string>
    <string name="latest_name">Samsung S20</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="profile">Profile</string>
    <string name="button_back">button_back</string>
    <string name="change_photo">Change photo</string>
    <string name="profile_name">Nikita Ropotov</string>
    <string name="upload_item">Upload item</string>
    <string name="profile_menu_item">Profile icon</string>
    <string name="plug_fragment_tv">There will be content here someday</string>
    <string name="backPressed">Again to get out</string>
    <string name="button">button</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="basket">Basket</string>
    <string name="comments">Comments</string>
</resources>