<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.welcomeBackFragment.WelcomeBackFragment">

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="123dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/etFirstName"
        app:layout_constraintStart_toStartOf="@+id/etFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="43dp"
        android:autofillHints="name"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack" />

    <LinearLayout
        android:id="@+id/llPassword"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="@+id/etFirstName"
        app:layout_constraintStart_toStartOf="@+id/etFirstName"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName">

        <EditText
            android:id="@+id/etPasswordText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_weight="97"
            android:autofillHints="password"
            android:background="@drawable/text_input"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:textSize="11sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@color/gray20"
            android:button="@drawable/check_box_selector"
            android:buttonTint="@color/gray"
            android:checked="false"
            android:gravity="center" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        style="@style/BlueButton"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="113dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/llPassword"
        app:layout_constraintStart_toStartOf="@+id/llPassword"
        app:layout_constraintTop_toBottomOf="@+id/llPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>