<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="175dp"
    android:layout_height="220dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@color/gray60">

            <ImageView
                android:id="@+id/ivSaleItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/photo_latest_view"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />
        </FrameLayout>


        <TextView
            android:id="@+id/tvSaleCategory"
            android:layout_width="50dp"
            android:layout_height="17dp"
            android:layout_margin="7dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="9sp"
            app:layout_constraintBottom_toTopOf="@+id/tvSaleName"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvSaleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:fontFamily="@font/poppins_medium"
            android:minLines="2"
            android:padding="3dp"
            android:text="@string/latest_name"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/tvSalePrice"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSalePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="3dp"
            android:text="@string/price_latest"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <ImageButton
            android:id="@+id/ibAdd"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="7dp"
            android:background="@drawable/background_category"
            android:backgroundTint="@color/white90"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/ibFavorite"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="7dp"
            android:background="@drawable/background_category"
            android:backgroundTint="@color/white90"
            android:src="@drawable/tab_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/ibAdd"
            app:layout_constraintEnd_toStartOf="@+id/ibAdd"
            app:layout_constraintTop_toTopOf="@+id/ibAdd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>